--- a/less/project/ferret/style_nav.less
+++ b/less/project/ferret/style_nav.less
@@ -103,6 +103,11 @@ header {
 	cursor: pointer;
 	z-index: 100;
 	display: none;
+	.transition;
+	
+	&.active {
+		.rotate(-90deg);
+	}
 	
 	// Media
 	@media @device {
