--- a/less/project/project_styles.less
+++ b/less/project/project_styles.less
@@ -25,16 +25,20 @@ section {
 }
 span {
 	display: block;
-	.transition;
+	.radius;
 	background: #e1e1e1;
+	.transition;
+	
 	&:hover {
 		color: #fff;
 		background: @dark;
 	}
+	
 	&.headline {
 		color: @dark;
 		background: none;
 	}
+	
 	&.logo {
 		position: absolute;
 		top: 5px;
@@ -47,3 +51,4 @@ span {
 	}
 }
 /* END */
+
