--- a/less/project/ferret/style_fonts.less
+++ b/less/project/ferret/style_fonts.less
@@ -45,8 +45,8 @@
     font-weight: normal;
     font-style: normal;
 }
-.font-light {font-family: 'OpenSansLight'; font-weight: normal;}
-.font-normal {font-family: 'OpenSansReg'; font-weight: normal;}
-.font-semi {font-family: 'OpenSansSemi'; font-weight: normal;}
-.font-bold {font-family: 'OpenSansBold'; font-weight: normal;}
-.font-headline {font-family: 'OpenSansBold'; font-weight: normal;}
+.font-light() {font-family: 'OpenSansLight'; font-weight: normal;}
+.font-normal() {font-family: 'OpenSansReg'; font-weight: normal;}
+.font-semi() {font-family: 'OpenSansSemi'; font-weight: normal;}
+.font-bold() {font-family: 'OpenSansBold'; font-weight: normal;}
+.font-headline() {font-family: 'OpenSansBold'; font-weight: normal;}
