--- a/less/project/ferret/box_grid.less
+++ b/less/project/ferret/box_grid.less
@@ -78,6 +78,7 @@
 .gridLoop (@grid-boxes) {}
 .gridLoop (@iterations);
 .box- {
+	&full {width: 100%;}
 	&half {width: 50%;}
 	&3rd {width: 100% / 3;}
 	&2-3rd {width: 100% / 3 * 2;}
