--- a/less/project/project_settings.less
+++ b/less/project/project_settings.less
@@ -5,7 +5,7 @@
 @grid-boxes: 16; // Sets the Max Number of Grid Boxes per Row (up to 24)
 @grid-gutter-width: 10px; // Sets the Gutter Width on Each Side of Each Box
 @grid-normal: 960px; // Sets Container Width
-@grid-wide: 1280px; // Sets Wide Screen Container Width
+@grid-wide: 1200px; // Sets Wide Screen Container Width
 @grid-row-with-spacing: 40px;
 
 
@@ -127,7 +127,7 @@
 
 
 // Blockquotes
-@quote-color: @gray;
+@quote-color: lighten(@base-color, 20%);
 @quote-font-size: 93%;
 @quote-author-font-style: italic;
 @quote-author-color: @dark;
