--- a/less/ferret.less
+++ b/less/ferret.less
@@ -34,7 +34,7 @@ Email: sstopnik@redventures.com
 
 
 // Fancybox Styles (Remove if Not Needed)
-//@import "project/ferret/fancybox.less";
+@import "project/ferret/fancybox.less";
 
 
 // Include this file ONLY if supporting IE6-7
