--- a/less/project/project_settings.less
+++ b/less/project/project_settings.less
@@ -180,7 +180,7 @@
 
 
 // Fancybox
-@fancybox-close: @red url(../images/fancybox/fancybox_close.png) no-repeat center;
+@fancybox-close: @red;
 @fancybox-nav: @dark;
 @fancybox-nav-hover: @blue;
 
