--- a/less/project/ferret/fancybox.less
+++ b/less/project/ferret/fancybox.less
@@ -1,161 +1,252 @@
-// Fancybox Default Styles
-
-/* Fancybox */
+// Fancybox v2.1.5
+.fancybox-wrap,
+.fancybox-skin,
+.fancybox-outer,
+.fancybox-inner,
+.fancybox-image,
+.fancybox-wrap iframe,
+.fancybox-wrap object,
+.fancybox-nav,
+.fancybox-nav span,
+.fancybox-tmp {
+	padding: 0;
+	margin: 0;
+	border: 0;
+	outline: none;
+	vertical-align: top;
+}
+.fancybox-wrap {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 8020;
+}
+.fancybox-skin {
+	position: relative;
+	color: @dark;
+	text-shadow: none;
+	.radius;
+	background: @white;
+}
+.fancybox-opened {
+	z-index: 8030;
+}
+.fancybox-outer, .fancybox-inner {
+	position: relative;
+}
+.fancybox-inner {
+	overflow: hidden;
+	
+	.fancybox-type-iframe & {
+		-webkit-overflow-scrolling: touch;
+	}
+}
+.fancybox-error {
+	color: #444;
+	.font-semi;
+	margin: 0;
+	padding: 15px;
+	white-space: nowrap;
+}
+.fancybox-image, .fancybox-iframe {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+.fancybox-image {
+	max-width: 100%;
+	max-height: 100%;
+}
+#fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
+	background-image: url(../images/fancybox/fancybox_sprite.png);
+}
 #fancybox-loading {
 	position: fixed;
 	top: 50%;
 	left: 50%;
-	width: 32px;
-	height: 32px;
-	margin-top: -16px;
-	margin-left: -16px;
+	margin-top: -22px;
+	margin-left: -22px;
+	background-position: 0 -108px;
+	opacity: 0.8;
 	cursor: pointer;
-	overflow: hidden;
-	z-index: 1104;
-	display: none;
-	div {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 32px;
-		height: 32px;
-		background: url(../images/fancybox/fancybox_loading.gif) no-repeat center center;
-	}
+	z-index: 8060;
 }
-#fancybox-overlay {
+#fancybox-loading div {
+	width: 44px;
+	height: 44px;
+	background: url(../images/fancybox/fancybox_loading.gif) no-repeat center center;
+}
+.fancybox-close {
 	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	z-index: 1100;
-	display: none;
-	background: @dark url(../images/bg_stripes.png) repeat;
-}
-#fancybox-tmp {
-	padding: 0;
-	margin: 0;
-	border: 0;
-	overflow: auto;
-	display: none;
-}
-#fancybox-wrap {
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 1101;
-	outline: none;
-	display: none;
-	-webkit-box-sizing: content-box;
-	-moz-box-sizing: content-box;
-	box-sizing: content-box;
-	margin-left: 10px;
-	* {
-		-webkit-box-sizing: content-box;
-		-moz-box-sizing: content-box;
-		box-sizing: content-box;
-	}
-}
-#fancybox-outer {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	background: #fff;
-	padding: 10px;
+	top: -25px;
+	right: -25px;
+	.size(40px);
 	.radius;
+	cursor: pointer;
+	z-index: 8040;
+	background-color: @fancybox-close;
+	background-position: 0 -80px;
+	
+	&:hover {
+		background-color: @dark;
+	}
 }
-#fancybox-content {
-	width: 0;
-	height: 0;
-	padding: 10px;
-	outline: none;
-	position: relative;
-	overflow: hidden;
-	z-index: 1102;
-	border: 0;
+.fancybox-nav {
+	position: absolute;
+	top: 0;
+	width: 20%;
+	height: 100%;
+	cursor: pointer;
+	z-index: 8040;
+	
+	span {
+		position: absolute;
+		top: 50%;
+		.size(40px);
+		margin-top: -20px;
+		cursor: pointer;
+		z-index: 8040;
+		background-color: @fancybox-nav;
+	}
 }
-#fancybox-hide-sel-frame {
+.fancybox-prev {
+	left: 0;
+	height: 100%;
+	opacity: 0;
+	
+	span {
+		background-position: 0 0;
+	}
+	
+	&:hover {
+		left: -35px;
+		opacity: 1;
+		
+		span {
+			background-color: @fancybox-nav-hover;
+		}
+	}
+}
+.fancybox-next {
+	right: 0;
+	height: 100%;
+	opacity: 0;
+	
+	span {
+		right: 0;
+		background-position: 0 -40px;
+	}
+	
+	&:hover {
+		right: -35px;
+		opacity: 1;
+		
+		span {
+			background-color: @fancybox-nav-hover;
+		}
+	}
+}
+.fancybox-tmp {
+	position: absolute;
+	top: -99999px;
+	left: -99999px;
+	visibility: hidden;
+	max-width: 99999px;
+	max-height: 99999px;
+	overflow: visible !important;
+}
+
+
+// Overlay
+.fancybox-lock {
+    overflow: hidden !important;
+    width: auto;
+    
+    body {
+	    overflow: hidden !important;
+    }
+    
+    &-test {
+		overflow-y: hidden !important;
+    }
+    
+    .fancybox-overlay {
+		overflow: auto;
+		overflow-y: scroll;
+	}
+}
+.fancybox-overlay {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
-	background: transparent;
-	z-index: 1101;
-}
-#fancybox-close {
-	position: absolute;
-	top: -20px;
-	right: -20px;
-	width: 40px;
-	height: 40px;
-	background: @fancybox-close;
-	cursor: pointer;
-	z-index: 1103;
+	overflow: hidden;
 	display: none;
-	&:hover {background-color: @dark;}
-}
-#fancybox-error {color: #444;font-size: 12px; padding: 14px; margin: 0;}
-#fancybox-img {
-	width: 100%;
-	height: 100%;
-	padding: 0;
-	margin: 0;
-	border: none;
-	outline: none;
-	line-height: 0;
-	vertical-align: top;
-}
-#fancybox-frame {
-	display: block;
-	width: 100%;
-	height: 100%;
-	border: none;
-	overflow: auto;
-}
-#fancybox-left, #fancybox-right {
-	position: absolute;
-	top: 0;
-	height: 80%;
-	width: 80px;
-	cursor: pointer;
-	outline: none;
-	z-index: 1102;
-	opacity: 0;
-	margin-top: 10%;
-	&:hover {opacity: 1;}
-}
-#fancybox-left {
-	left: -10px;
-	&:hover {
-		left: -20px;
+	z-index: 8010;
+	background: rgba(0,0,0,.6) @striped;
+	
+	&-fixed {
+		position: fixed;
+		bottom: 0;
+		right: 0;
 	}
-	span {left: 0;}
 }
-#fancybox-right {
-	right: -10px;
-	&:hover {
-		right: -20px;
-	}
-	span {right: 0;}
-}
-#fancybox-left-ico, #fancybox-right-ico {
-	position: absolute;
-	top: 50%;
-	width: 40px;
-	height: 40px;
-	margin-top: -40px;
-	cursor: pointer;
-	z-index: 1102;
-	display: block;
-	&:hover {background-color: @fancybox-nav-hover;}
-}
-#fancybox-left-ico {background: @fancybox-nav url(../images/fancybox/fancybox_arrow_left.png) no-repeat center;}
-#fancybox-right-ico {background: @fancybox-nav url(../images/fancybox/fancybox_arrow_right.png) no-repeat center;}
-#fancybox-title {font-family: inherit; font-size: 12px; z-index: 1102;}
-.fancybox-title-inside {
-	color: @dark;
-	background: #fff;
+
+
+// Titles
+.fancybox-title {
+	visibility: hidden;
+	.font-semi;
+	font-size: 11px;
 	position: relative;
+	text-shadow: none;
+	z-index: 8050;
 }
-// IE6, IE7, IE8
-.fancybox-ie .fancybox-bg {background: transparent !important;}
+.fancybox-opened .fancybox-title {
+	visibility: visible;
+}
+.fancybox-title-float-wrap {
+	position: absolute;
+	bottom: 0;
+	right: 50%;
+	margin-bottom: -40px;
+	z-index: 8050;
+	text-align: center;
+}
+.fancybox-title-float-wrap .child {
+	display: inline-block;
+	margin-right: -100%;
+	padding: 5px 20px;
+	background: @dark;
+	.radius;
+	color: @white;
+	white-space: nowrap;
+}
+.fancybox-title-outside-wrap {
+	position: relative;
+	margin-top: 10px;
+	color: @white;
+}
+.fancybox-title-inside-wrap {
+	padding-top: 10px;
+}
+.fancybox-title-over-wrap {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	color: @white;
+	padding: 10px;
+	background: @dark;
+}
+
+
+// Media
+@media @retina {
+	#fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
+		background-image: url(../images/fancybox/fancybox_sprite@2x.png);
+		background-size: 44px 152px;
+	}
+	#fancybox-loading div {
+		background-image: url(../images/fancybox/fancybox_loading@2x.gif);
+		background-size: 24px 24px;
+	}
+}
