--- a/less/project/project_settings.less
+++ b/less/project/project_settings.less
@@ -102,7 +102,7 @@
 
 // Form Fields
 @input-bg: #fff;
-@input-height: 40px;
+@input-height: 45px;
 @input-font: @font-normal;
 @input-font-size: 14px;
 @input-font-weight: normal;
@@ -113,13 +113,13 @@
 @input-bg-focus: lighten(@yellow, 10%);
 @input-border-focus: darken(@input-bg-focus, 25%);
 @input-margin-bottom: 20px;
-@input-textarea-height: 120px;
-@input-checkbox-size: 15px; // Checkbox & Radio Buttons
+@input-textarea-height: 140px;
+@input-checkbox-size: 17px; // Checkbox & Radio Buttons
 @input-checkbox-bg: #fff;
 @input-checkbox-checked: url(../images/ferret/bg_checkbox.png); // Chrome Only
 @input-radio-checked: url(../images/ferret/bg_radio_button.png); // Chrome Only
 @input-label-font-size: 12px;
-@placeholder-color: #898989;
+@placeholder-color: #acacac;
 
 
 // Borders
