edit to update date

--- a/less/ferret.less
+++ b/less/ferret.less
@@ -1,8 +1,8 @@
 /*********************************************
 Ferret Framework Main Stylesheet
-Last Updated: 5/1/13
+Last Updated: 7/9/13
 Written by: Sean Stopnik
-Email: sstopnik@redventures.com
+Email: thelifemgmt@gmail.com
 *********************************************/
 
 
