--- a/less/project/project_settings.less
+++ b/less/project/project_settings.less
@@ -135,7 +135,7 @@
 
 
 // Lists
-@list-item-checkbox: @orange;
+@list-item-checkbox: @green;
 @list-item-multiply: @red;
 @list-item-plus: @blue;
 @list-item-margin-bottom: 10px;
